# vinyl-collection-manager

./: .env  .gitignore  BACKFILL_README.md  DISCOGS_API_FIELDS.md  EXTENDED_FIELDS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  README.md  RELATIONAL_CREDITS_SYSTEM.md  RUNNING.md  SETTINGS_SYNC_IMPLEMENTATION.md  backfill_discogs_data.py  discogs_data.py  discogs_lookup.py  discogs_official_credits.json  gunicorn.conf.py  migrate_to_relational_credits.py  pyproject.toml  render.yaml  requirements.txt  server.py  start_server.sh  verify_relational_data.py
barcode_scanner/: __init__.py  analysis.py  auth_utils.py  data_processor.py  db.py  extensions.py  image_lookup.py  server.py  spotify.py
barcode_scanner/blueprints/: analytics.py  auth.py  custom.py  lookup.py  records.py  spotify.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
static/: app.js  styles.css
supabase/: .gitignore  config.toml
supabase/migrations/: 20240000000000_add_spotify_sync_cron.sql  20240000000001_enable_pg_net.sql  20240214000000_add_cleanup_trigger.sql  20240214000001_add_boolean_type.sql  20240214000002_extend_session_timeout.sql  20240214000003_add_option_colors.sql  20240214000004_remove_notes_column.sql  20240214000005_add_spotify_playlist_subscriptions.sql  20240216000000_add_denormalized_custom_values.sql  20240216000001_extend_session_expiry.sql  20240306000000_add_column_filters.sql  20240720000001_extend_session_timeout.sql  20250103000000_convert_musicians_to_jsonb.sql  (+4 more)
templates/: index.html
(+40 files in other folders)
